src/objects/Reading__c.object
<CustomObject>
    <fields>
        <fullName>ActualDeviceReading__c</fullName>
        <description>Device Reading</description>
        <label>Actual Device Reading</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeviceReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Reference</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Readings</relationshipLabel>
        <relationshipName>Readings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrossConsumption__c</fullName>
        <description>Trigger to calculate &quot;Reading - previous Reading &quot;</description>
        <label>Gross Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReaderRemarks__c</fullName>
        <label>Reader Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reader__c</fullName>
        <description>Assumption this information arrives from the 3rd party reading management software</description>
        <label>Reader</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReadingDate__c</fullName>
        <label>Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReadingType__c</fullName>
        <description>Different functionality maybe invoked based on read type e.g. meter exchange reads, tripped meter etc.
Also need to consider read types are flagged as estimate/actual/ad-hoc</description>
        <label>Reading Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclic Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate Initial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <formula>IF(ISPICKVAL(DeviceReference__r.DeviceType__r.UnitOfMeasure__c,&apos;Imperial - UK Gallons&apos;), 
 IF(ISBLANK(DeviceReference__r.DeviceType__r.Multiplier__c),(ActualDeviceReading__c / 1000)*0.22,(ActualDeviceReading__c / 1000)*0.22*DeviceReference__r.DeviceType__r.Multiplier__c)
 ,IF(ISBLANK(DeviceReference__r.DeviceType__r.Multiplier__c),ActualDeviceReading__c,ActualDeviceReading__c *DeviceReference__r.DeviceType__r.Multiplier__c))</formula>
        <label>Reading</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Reading</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ReadingMustNotBeGreaterThanDeviceDigits</fullName>
        <active>true</active>
        <description>Reading cannot be greater than Digits on the related Device record</description>
        <errorConditionFormula>LEN(TEXT(ActualDeviceReading__c))&gt; DeviceReference__r.Digit__c</errorConditionFormula>
        <errorMessage>Actual Device Reading can not be greater than the number of Digits on Device.</errorMessage>
    </validationRules>
</CustomObject>